# EternalTwin

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: core.rs  job.rs  lib.rs  popotamo.rs  temporal.rs
crates/job_store/: Cargo.toml
crates/job_store/src/: lib.rs  mem.rs  pg.rs  test.rs
crates/popotamo_client/src/http/: errors.rs  scraper.rs
crates/serde_tools/: Cargo.toml
crates/serde_tools/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: job.rs  lib.rs
crates/services/src/job/: erased.rs  runner.rs  task.rs
crates/services/tests/: job.rs
crates/user_store/src/: mem.rs
db/scripts/upgrade/: 014-015.sql
test-resources/scraping/popotamo/user/480534.592161/: value.json
test-resources/scraping/popotamo/user/480534.guest/: value.json
