[package]
name = "etwin_services"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Top-level Eternal-Twin services"
documentation = "https://github.com/eternal-twin/etwin"
homepage = "https://github.com/eternal-twin/etwin"
repository = "https://github.com/eternal-twin/etwin"
readme = "./README.md"
keywords = ["etwin"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
async-trait = "0.1.48"
chrono = "0.4.19"
etwin_core = { version = "0.1.0" }
neon = { version = "0.8.0", optional = true, default-features = false, features = ["napi-runtime"] }
futures = "0.3.13"
serde = "1.0.125"
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = ["sync"] }

[dev-dependencies]
etwin_config = { version = "0.1.0" }
etwin_db_schema = { version = "0.1.0" }
etwin_link_store = { version = "0.1.0" }
etwin_hammerfest_store = { version = "0.1.0" }
etwin_user_store = { version = "0.1.0" }
etwin_hammerfest_client = { version = "0.1.0" }
etwin_job_store = { version = "0.0.1" }
serial_test = "0.5.1"
sqlx = { version = "0.5.1", default-features = false, features = ["macros", "chrono", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.4.0", features = ["macros", "rt"] }
